src/snapshots/roughly__format__test__missing.snap
---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n            x <- 1\n            function() { # missing function body\n                x <- 2\n                x <- 3\n        \"#\n}).unwrap()"
---
x <- 1
function() {
  # missing function body
  x <- 2
  x <- 3
}
