src/snapshots/roughly__format__test__program.snap
---
source: src/format.rs
expression: "fmt(indoc!\n{ r#\"\n        \t\"foo\"\n            if (1) {\n            }\n        \"# })"
---
"foo"
if (1) {

}
