src/snapshots/roughly__format__test__string.snap
---
source: src/format.rs
expression: "format_str(indoc! { r#\"\n            '\"foo\"'\n        \"# }).unwrap()"
---
"\"foo\""
